--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,5 +10,6 @@
 
     <button class="btn" type="submit">Login</button>
   </form>
+  <p class="muted left-link"><a href="/forgot-password">Forgot Password?</a></p>
   <p class="muted">New user? <a href="/signup">Create an account</a></p>
 </section>
