--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -13,5 +13,6 @@
 
     <button class="btn" type="submit">Sign Up</button>
   </form>
+  <p class="muted">After signup, verify your email with OTP to activate login.</p>
   <p class="muted">Already registered? <a href="/login">Login here</a></p>
 </section>
