--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,7 +17,7 @@
     </script>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body class="page-ready">
     <% if (currentUser) { %>
       <%- include('../partials/navbar') %>
       <main class="main-content authenticated-main">
