--- a/views/tasks/new.ejs
+++ b/views/tasks/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <section class="form-wrapper">
   <h1>Create Task</h1>
-  <form action="/tasks" method="POST" class="form-card">
+  <form action="/dashboard" method="POST" class="form-card">
     <label for="title">Title *</label>
     <input id="title" type="text" name="task[title]" required />
 
